--- a/app/src/app.html
+++ b/app/src/app.html
@@ -41,6 +41,12 @@
 
     body {
       background-color: rgba(0, 0, 0, 0.0) !important;
+      -ms-overflow-style: none;  /* Internet Explorer 10+ */
+      scrollbar-width: none;  /* Firefox */
+    }
+
+    body::-webkit-scrollbar {
+      display: none;  /* Safari and Chrome */
     }
 
     #vsebina {
