--- a/app/src/app.html
+++ b/app/src/app.html
@@ -5,54 +5,21 @@
   <title>Uroš Jarc | Inštruktor programiranja, fizike, matematike</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width"/>
-  <meta name="description"
-        content="Uroš Jarc Inštruktor programiranja, fizike, matematike. Ponujam kvalitetne inštrukcije univerzitetnega nivoja za programiranje, fizike, matematike. Pripravljam študente na izspite iz programiranja, pomagam pri izvedbi in programiranju diplomske naloge. Pomagam pri postopku prekvalifikacije za IT industrijo.">
-  <meta name="keywords"
-        content="inštrukcije programiranja, inštrukcije fizike, inštrukcije matematike, python, javascript, java, fakulteta za računalništvo, FRI, vegova, srednja računalniška šola, diplomska naloga">
+  <meta name="description" content="Uroš Jarc Inštruktor programiranja, fizike, matematike. Ponujam kvalitetne inštrukcije univerzitetnega nivoja za programiranje, fizike, matematike. Pripravljam študente na izspite iz programiranja, pomagam pri izvedbi in programiranju diplomske naloge. Pomagam pri postopku prekvalifikacije za IT industrijo.">
+  <meta name="keywords" content="inštrukcije programiranja, inštrukcije fizike, inštrukcije matematike, python, javascript, java, fakulteta za računalništvo, FRI, vegova, srednja računalniška šola, diplomska naloga">
   <meta name="author" content="Uroš Jarc">
 
   <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/smui.css"/>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/material-icons.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/roboto-mono.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/smui.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/bootstrap-grid.min.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/main.css"/>
 
   <script src="%sveltekit.assets%/js/acuityscheduling.embed.js" type="text/javascript"></script>
   <script src="%sveltekit.assets%/js/three.min.js"></script>
   <script src="%sveltekit.assets%/js/vanta.birds.min.js"></script>
-  <style>
-    #background {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-    }
-
-    * {
-      font-family: 'Roboto Mono', monospace !important;
-    }
-
-    i {
-      font-family: 'Material Icons', monospace !important;
-    }
-
-    body {
-      background-color: rgba(0, 0, 0, 0.0) !important;
-      -ms-overflow-style: none;  /* Internet Explorer 10+ */
-      scrollbar-width: none;  /* Firefox */
-    }
-
-    body::-webkit-scrollbar {
-      display: none;  /* Safari and Chrome */
-    }
-
-    #vsebina {
-      opacity: 0.8;
-    }
-  </style>
 
   %sveltekit.head%
 
