--- a/app/src/app.html
+++ b/app/src/app.html
@@ -47,7 +47,7 @@
     minWidth: 200.00,
     scale: 1.00,
     scaleMobile: 1.00,
-    backgroundColor: 0xffffff,
+    backgroundColor: 0x333333,
     quantity: 2.00,
     speedLimit: 4.00,
     color2: 0xff0000
