--- a/app/src/app.html
+++ b/app/src/app.html
@@ -37,6 +37,7 @@
     document.write(`
 <script src="%sveltekit.assets%/js/three.min.js"><\/script>
 <script src="%sveltekit.assets%/js/vanta.birds.min.js"><\/script>
+<script src="%sveltekit.assets%/js/core.js"><\/script>
 <script>
   VANTA.BIRDS({
     el: "#background",
