--- a/app/src/app.html
+++ b/app/src/app.html
@@ -46,11 +46,14 @@
     minHeight: 200.00,
     minWidth: 200.00,
     scale: 1.00,
+    birdSize: 1.5,
     scaleMobile: 1.00,
     backgroundColor: 0x333333,
     quantity: 2.00,
     speedLimit: 4.00,
-    color2: 0xff0000
+    color1: 0xff0000,
+    color2: 0x000000,
+    separation: 50
   })
 <\/script>`);
 }
