--- a/app/src/app.html
+++ b/app/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sl">
+<html lang="sl" class="noscrool">
 <head>
 
   <title>Uroš Jarc | Inštruktor programiranja, fizike, matematike</title>
@@ -35,26 +35,27 @@
 <script>
   if (screen && screen.width > 480) {
     document.write(`
-<script src="%sveltekit.assets%/js/three.min.js"><\/script>
-<script src="%sveltekit.assets%/js/vanta.birds.min.js"><\/script>
-<script>
-  VANTA.BIRDS({
-    el: "#background",
-    mouseControls: true,
-    touchControls: true,
-    gyroControls: false,
-    minHeight: 200.00,
-    minWidth: 200.00,
-    scale: 1.00,
-    birdSize: 1.5,
-    scaleMobile: 1.00,
-    backgroundColor: 0xffffff,
-    quantity: 2.00,
-    speedLimit: 4.00,
-    color1: 0xff0000,
-    color2: 0x000000,
-    separation: 50
-  })
-<\/script>`);
-}
+      <script src="%sveltekit.assets%/js/three.min.js"><\/script>
+      <script src="%sveltekit.assets%/js/vanta.birds.min.js"><\/script>
+      <script>
+        VANTA.BIRDS({
+          el: "#background",
+          mouseControls: true,
+          touchControls: true,
+          gyroControls: false,
+          minHeight: 200.00,
+          minWidth: 200.00,
+          scale: 1.00,
+          birdSize: 1.5,
+          scaleMobile: 1.00,
+          backgroundColor: 0x333333,
+          quantity: 2.00,
+          speedLimit: 4.00,
+          color1: 0xff0000,
+          color2: 0x000000,
+          separation: 50
+        })
+      <\/script>
+    `);
+  }
 </script>
