--- a/app/src/app.html
+++ b/app/src/app.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="%sveltekit.assets%/css/main.css"/>
 
   <script src="%sveltekit.assets%/js/acuityscheduling.embed.js" type="text/javascript" async></script>
-
+  <script src="%sveltekit.assets%/js/core.js" type="text/javascript" async></script>
   %sveltekit.head%
 
 </head>
