--- a/app/src/app.html
+++ b/app/src/app.html
@@ -48,10 +48,10 @@
           scale: 1.00,
           birdSize: 1.5,
           scaleMobile: 1.00,
-          backgroundColor: 0x333333,
+          backgroundColor: "skyblue",
           quantity: 2.00,
           speedLimit: 4.00,
-          color1: 0xff0000,
+          color1: "royalblue",
           color2: 0x000000,
           separation: 50
         })
