--- a/app/src/app.html
+++ b/app/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sl" class="noscrool">
+<html lang="sl">
 <head>
 
   <title>Uroš Jarc | Inštruktor programiranja, fizike, matematike</title>
@@ -13,21 +13,29 @@
 
   <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
 
-  <link rel="stylesheet" href="%sveltekit.assets%/css/material-icons.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/roboto-mono.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/smui.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/bootstrap-grid.min.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/main.css"/>
+  <!--  Libs css-->
+  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/bootstrap-grid.min.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/material-icons.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/roboto-mono.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/smui.css"/>
 
-  <script src="%sveltekit.assets%/js/acuityscheduling.embed.js" type="text/javascript" async></script>
-  <script src="%sveltekit.assets%/js/core.js" type="text/javascript" async></script>
+  <!--  Css-->
+  <link rel="stylesheet" href="%sveltekit.assets%/css/animacije.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/barve.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/dom.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/sence.css"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/oblike.css"/>
+
+  <!--  Libs js-->
+  <script src="%sveltekit.assets%/libs/js/acuityscheduling.embed.js" type="text/javascript"></script>
+
   %sveltekit.head%
 
 </head>
 
 <body data-sveltekit-preload-data="hover">
 <div style="display: contents">%sveltekit.body%</div>
-<div id="background"></div>
+<div id="anim-background"></div>
 </body>
 
 </html>
@@ -35,11 +43,11 @@
 <script>
   if (screen && screen.width > 480) {
     document.write(`
-      <script src="%sveltekit.assets%/js/three.min.js"><\/script>
-      <script src="%sveltekit.assets%/js/vanta.birds.min.js"><\/script>
+      <script src="%sveltekit.assets%/libs/js/three.min.js"><\/script>
+      <script src="%sveltekit.assets%/libs/js/vanta.birds.min.js"><\/script>
       <script>
         VANTA.BIRDS({
-          el: "#background",
+          el: "#anim-background",
           mouseControls: true,
           touchControls: true,
           gyroControls: false,
