--- a/app/src/app.html
+++ b/app/src/app.html
@@ -5,46 +5,28 @@
   <title>Uroš Jarc | Inštruktor programiranja, fizike, matematike</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width"/>
-  <meta name="description"
-        content="Uroš Jarc Inštruktor programiranja, fizike, matematike. Ponujam kvalitetne inštrukcije univerzitetnega nivoja za programiranje, fizike, matematike. Pripravljam študente na izspite iz programiranja, pomagam pri izvedbi in programiranju diplomske naloge. Pomagam pri postopku prekvalifikacije za IT industrijo.">
-  <meta name="keywords"
-        content="inštrukcije programiranja, inštrukcije fizike, inštrukcije matematike, python, javascript, java, fakulteta za računalništvo, FRI, vegova, srednja računalniška šola, diplomska naloga">
+  <meta name="description" content="Uroš Jarc Inštruktor programiranja, fizike, matematike. Ponujam kvalitetne inštrukcije univerzitetnega nivoja za programiranje, fizike, matematike. Pripravljam študente na izspite iz programiranja, pomagam pri izvedbi in programiranju diplomske naloge. Pomagam pri postopku prekvalifikacije za IT industrijo.">
+  <meta name="keywords" content="inštrukcije programiranja, inštrukcije fizike, inštrukcije matematike, python, javascript, java, fakulteta za računalništvo, FRI, vegova, srednja računalniška šola, diplomska naloga">
   <meta name="author" content="Uroš Jarc">
 
   <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
-
-  <!--  Libs css-->
-  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/bootstrap-grid.min.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/material-icons.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/roboto-mono.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/libs/css/smui.css"/>
-
-  <!--  Css-->
-  <link rel="stylesheet" href="%sveltekit.assets%/css/animacije.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/barve.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/dom.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/sence.css"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/oblike.css"/>
-
-  <!--  Libs js-->
-  <script src="%sveltekit.assets%/libs/js/acuityscheduling.embed.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="%sveltekit.assets%/css/smui.css.gz"/>
 
   %sveltekit.head%
 
 </head>
 
 <body data-sveltekit-preload-data="hover">
-<div style="display: contents">%sveltekit.body%</div>
-<div id="anim-background"></div>
-</body>
 
-</html>
+<div style="display: contents">
+  %sveltekit.body%
+</div>
 
-<script>
-  if (screen && screen.width > 480) {
-    document.write(`
-      <script src="%sveltekit.assets%/libs/js/three.min.js"><\/script>
-      <script src="%sveltekit.assets%/libs/js/vanta.birds.min.js"><\/script>
+<div id="anim-background">
+  <script>
+    if (screen && screen.width > 480) {
+      document.write(`
+      <script src="%sveltekit.assets%/js/vanta-birds.js.gz"><\/script>
       <script>
         VANTA.BIRDS({
           el: "#anim-background",
@@ -65,5 +47,10 @@
         })
       <\/script>
     `);
-  }
-</script>
+    }
+  </script>
+</div>
+
+</body>
+
+</html>
