--- a/app/src/app.html
+++ b/app/src/app.html
@@ -26,7 +26,7 @@
   <script>
     if (screen && screen.width > 480) {
       document.write(`
-      <script src="%sveltekit.assets%/js/vanta-birds.js.gz"><\/script>
+      <script src="%sveltekit.assets%/js/external.js.gz"><\/script>
       <script>
         VANTA.BIRDS({
           el: "#anim-background",
