dialog working and optimizing background.

--- a/app/src/app.html
+++ b/app/src/app.html
@@ -5,12 +5,14 @@
   <title>Uroš Jarc | Inštruktor programiranja, fizike, matematike</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width"/>
-  <meta name="description" content="Uroš Jarc Inštruktor programiranja, fizike, matematike. Ponujam kvalitetne inštrukcije univerzitetnega nivoja za programiranje, fizike, matematike. Pripravljam študente na izspite iz programiranja, pomagam pri izvedbi in programiranju diplomske naloge. Pomagam pri postopku prekvalifikacije za IT industrijo.">
-  <meta name="keywords" content="inštrukcije programiranja, inštrukcije fizike, inštrukcije matematike, python, javascript, java, fakulteta za računalništvo, FRI, vegova, srednja računalniška šola, diplomska naloga">
+  <meta name="description"
+        content="Uroš Jarc Inštruktor programiranja, fizike, matematike. Ponujam kvalitetne inštrukcije univerzitetnega nivoja za programiranje, fizike, matematike. Pripravljam študente na izspite iz programiranja, pomagam pri izvedbi in programiranju diplomske naloge. Pomagam pri postopku prekvalifikacije za IT industrijo.">
+  <meta name="keywords"
+        content="inštrukcije programiranja, inštrukcije fizike, inštrukcije matematike, python, javascript, java, fakulteta za računalništvo, FRI, vegova, srednja računalniška šola, diplomska naloga">
   <meta name="author" content="Uroš Jarc">
 
   <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
-  <link rel="stylesheet" href="%sveltekit.assets%/css/smui.css.gz"/>
+  <link rel="stylesheet" href="%sveltekit.assets%/gz/smui.css.gz"/>
 
   %sveltekit.head%
 
@@ -25,32 +27,14 @@
 <div id="anim-background">
   <script>
     if (screen && screen.width > 480) {
-      document.write(`
-      <script src="%sveltekit.assets%/external.js.gz"><\/script>
-      <script>
-        VANTA.BIRDS({
-          el: "#anim-background",
-          mouseControls: true,
-          touchControls: true,
-          gyroControls: false,
-          minHeight: 200.00,
-          minWidth: 200.00,
-          scale: 1.00,
-          birdSize: 1.5,
-          scaleMobile: 1.00,
-          backgroundColor: "skyblue",
-          quantity: 2.00,
-          speedLimit: 4.00,
-          color1: "royalblue",
-          color2: 0x000000,
-          separation: 50
-        })
-      <\/script>
-    `);
+      const script = document.createElement('script');
+      script.src = "gz/external.js.gz"
+      document.body.appendChild(script)
     }
   </script>
 </div>
-
 </body>
+
+
 
 </html>
