--- a/app/src/app.html
+++ b/app/src/app.html
@@ -28,7 +28,7 @@
   <script>
     if (screen && screen.width > 480) {
       const script = document.createElement('script');
-      script.src = "gz/external.js.gz"
+      script.src = "/gz/external.js.gz"
       document.body.appendChild(script)
     }
   </script>
